<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_sprite"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:adjustViewBounds="true"
                tools:src="@tools:sample/avatars" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/tv_title_type"
                    style="@style/TextWhite16MediumTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_title_type"
                    android:layout_marginTop="12dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="4"
                    tools:listitem="@layout/list_item_types"
                    android:nestedScrollingEnabled="false" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_weight"
                        style="@style/TextWhite18MediumTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_weight"
                        style="@style/TextWhite16Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_title_weight"
                        tools:text="69'69" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_height"
                        style="@style/TextWhite18MediumTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/height" />

                    <TextView
                        android:id="@+id/tv_height"
                        style="@style/TextWhite16Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="69'69" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/layout_stats_hp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_hp"
                        style="@style/TextWhite14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/hp" />

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/pb_hp"
                        style="@style/ProgressBarStatsTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        tools:progress="60" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/layout_stats_atk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_margin_stats"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_atk"
                        style="@style/TextWhite14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/attack" />

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/pb_atk"
                        style="@style/ProgressBarStatsTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        tools:progress="60" />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/layout_stats_def"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_margin_stats"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_def"
                        style="@style/TextWhite14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/defense" />

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/pb_def"
                        style="@style/ProgressBarStatsTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        tools:progress="60" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_stats_s_atk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_margin_stats"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_s_atk"
                    style="@style/TextWhite14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/s_attack" />

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/pb_s_atk"
                    style="@style/ProgressBarStatsTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:progress="60" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_stats_s_def"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_margin_stats"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_s_def"
                    style="@style/TextWhite14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/s_defend" />

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/pb_s_def"
                    style="@style/ProgressBarStatsTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:progress="60" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_stats_spd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_margin_stats"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_spd"
                    style="@style/TextWhite14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/speed" />

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/pb_spd"
                    style="@style/ProgressBarStatsTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:progress="60" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_title_abilities"
                    style="@style/TextWhite16MediumTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/abilities"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_abilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_title_abilities"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/list_item_single"
                    android:nestedScrollingEnabled="false" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_title_moves"
                    style="@style/TextWhite16MediumTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/moves"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_moves"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_title_moves"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/list_item_single"
                    android:nestedScrollingEnabled="false" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>